Creado mediante Colaboratory

--- a/Fundamentos3_Cyp_.ipynb
+++ b/Fundamentos3_Cyp_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Fundamentos3_Cyp_.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLq4kIpe2SkmcvXGOrxLKa",
+      "authorship_tag": "ABX9TyOFknGHCA1myEvcMmwiVda5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,7 +179,7 @@
         "    print(x)\n",
         "print(\"fin del programa\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "        CUECER += 1\n",
         "print(\"CUECER=\" ,CUECER)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +293,7 @@
         "for j in range (1, 11):\n",
         "    print(f\"7 * {j}=\", 7*j)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
         "else:\n",
         "        print(\"valor fuera de rango 1-5\")"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
         "numero = [ x*10 for x in range(1,11) ]\n",
         "print(numeros )"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
         "print(edades)\n",
         "print(\"promedio: \", suma/5)\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +494,7 @@
         "print(valores)\n",
         "\n"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,6 +504,354 @@
             "8.990301801632008\n",
             "9.05\n",
             "[10.22, 5.99, 5.82, 8.93, 8.1, 7.95, 7.43, 5.86, 5.46, 5.3, 5.48, 6.9, 9.5, 8.32, 10.29, 10.35, 6.12, 6.3, 6.5, 7.62]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-h-KPC_tFbIu"
+      },
+      "source": [
+        "## 30 de Noviembre del 2021"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5-rCEj1z6HJl"
+      },
+      "source": [
+        "## Estructura de control de repeticion Haz- mientras.\n",
+        "\n",
+        "Una estructura de control haz-mientras nos permite ejecutar repetidamente mientras una condicion se siga cumpliendo.\n",
+        "```\n",
+        "while <condición>\n",
+        "    <Bloque de sentencias a ejecutar repetidamente>\n",
+        "<siguiente sentencia psoterior a while>\n",
+        "\n",
+        "```\n",
+        "La diferencia principal en compracion con la estructura for es que con WHILE no conoces el numero de ciclos a ejecutar en for si se conoce.\n",
+        "\n",
+        "Como ejemplo iniciemos con le siguiente enunciado.\n",
+        "\n",
+        "Hacer un programa que solicite un valor entero positivo y calcule repetidamente la mitad y se reasigne a la misma variable.El ciclo se debe detener cuando el resulatado sea menor que 1.\n",
+        "mostrar en pantalla el resultado de cada calculo y al final el numero de interacciones que realizo.\n",
+        "\n",
+        "```\n",
+        "Introduce un numero entero positivo 17\n",
+        "8.5\n",
+        "4.25\n",
+        "2.12\n",
+        "1.06\n",
+        "0.53\n",
+        "Total de interacciones= 5\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5AZKj2mW-FIn",
+        "outputId": "39dab214-7b85-426c-b2d1-b6c72ca6d5e7"
+      },
+      "source": [
+        "valor = int(input(\"Introduce un numero entero positivo:\"))\n",
+        "contador = 0\n",
+        "if valor > 0:\n",
+        "    while valor > 1.0:\n",
+        "        valor = valor /2\n",
+        "        print(round(valor, 2))\n",
+        "        contador += 1\n",
+        "else:\n",
+        "    print(\"El es negativo, intenta de nuevo\")\n",
+        "print(\"Total de iteraciones\",contador)    "
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce un numero entero positivo:7\n",
+            "3.5\n",
+            "1.75\n",
+            "0.88\n",
+            "Total de iteraciones 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hoibMKeL_iVA",
+        "outputId": "10e40fc1-336a-4a26-bdf4-58c29cdbfaac"
+      },
+      "source": [
+        "valor = int(input(\"Dame un valor entero:\"))\n",
+        "\n",
+        "while  valor != 0:\n",
+        "    print(valor)\n",
+        "    valor = int(input(\"Dame un valor entero:\"))\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame un valor entero:0\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QulH7Gp1Eb2q"
+      },
+      "source": [
+        "valor = int(input(\"Dame un valor entero:\"))\n",
+        "while valor != 0:\n",
+        "    print(valor)\n",
+        "    print(\"Otras cosas\")\n",
+        "print(\"Fin del programa \")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TFn5AurR_sw2"
+      },
+      "source": [
+        "Escribe un programa que permita generar la tabla de multiplicar de un numero entero positivo N, comenzando desde 1.\n",
+        "\n",
+        "Si el usuario escribe un numero incorrecto, el programa no se ejecuta. En cambio se pregunta de nuevo por la info hasta que el dato ingresado sea el correcto. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TWXwrJN8_uXU",
+        "outputId": "af6659bd-3e00-45bd-b555-60f50596fd13"
+      },
+      "source": [
+        "n = int(input(\"Ingrese un numero entero positivo:\"))\n",
+        "if n>0:\n",
+        "    print(\"Es correcto\")\n",
+        "    for i in range(1,11):\n",
+        "        print( n, \"por\", i, \"es igual a:\",n*i)\n",
+        "else:\n",
+        "    print(\"El numero ingresado es incorrecto\")\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero entero positivo:3\n",
+            "Es correcto\n",
+            "3 por 1 es igual a: 3\n",
+            "3 por 2 es igual a: 6\n",
+            "3 por 3 es igual a: 9\n",
+            "3 por 4 es igual a: 12\n",
+            "3 por 5 es igual a: 15\n",
+            "3 por 6 es igual a: 18\n",
+            "3 por 7 es igual a: 21\n",
+            "3 por 8 es igual a: 24\n",
+            "3 por 9 es igual a: 27\n",
+            "3 por 10 es igual a: 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1dL4qVACIQK",
+        "outputId": "900bbf06-e93c-4792-cc4c-b4db5530acbc"
+      },
+      "source": [
+        "comprobar = True\n",
+        "\n",
+        "while comprobar == True:\n",
+        "    \n",
+        "  n = int(input(\"Ingrese un numero entero positivo:\"))\n",
+        "  if n>0:\n",
+        "    print(\"Es correcto\")\n",
+        "    for i in range(1,11):\n",
+        "        print( n, \"por\", i, \"es igual a:\",n*i)\n",
+        "\n",
+        "  comprobar = False\n",
+        "\n",
+        "else:\n",
+        "    print(\"El numero ingresado es incorrecto\")"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero entero positivo:5\n",
+            "Es correcto\n",
+            "5 por 1 es igual a: 5\n",
+            "5 por 2 es igual a: 10\n",
+            "5 por 3 es igual a: 15\n",
+            "5 por 4 es igual a: 20\n",
+            "5 por 5 es igual a: 25\n",
+            "5 por 6 es igual a: 30\n",
+            "5 por 7 es igual a: 35\n",
+            "5 por 8 es igual a: 40\n",
+            "5 por 9 es igual a: 45\n",
+            "5 por 10 es igual a: 50\n",
+            "El numero ingresado es incorrecto\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AL4MiUY1HRB5",
+        "outputId": "3f5b7ffd-d1fd-4a51-aa80-d8459977adca"
+      },
+      "source": [
+        "comprobar = True\n",
+        "\n",
+        "while comprobar == True:\n",
+        "    \n",
+        "  n = int(input(\"Ingrese un numero entero positivo:\"))\n",
+        "  if n>0:\n",
+        "\n",
+        "      i=1     #Se inicializa el valor 1\n",
+        "\n",
+        "      while i<11:\n",
+        "        print( n, \"por\", i, \"es igual a:\",n*i)\n",
+        "\n",
+        "        i += 1 # i va ser igual la misma variable mas 1\n",
+        "        comprobar = False\n",
+        "  else:\n",
+        "      print(\"El numero ingresado no es correcto. intente de nuevo\")"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero entero positivo:-4\n",
+            "El numero ingresado no es correcto. intente de nuevo\n",
+            "Ingrese un numero entero positivo:8\n",
+            "8 por 1 es igual a: 8\n",
+            "8 por 2 es igual a: 16\n",
+            "8 por 3 es igual a: 24\n",
+            "8 por 4 es igual a: 32\n",
+            "8 por 5 es igual a: 40\n",
+            "8 por 6 es igual a: 48\n",
+            "8 por 7 es igual a: 56\n",
+            "8 por 8 es igual a: 64\n",
+            "8 por 9 es igual a: 72\n",
+            "8 por 10 es igual a: 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vuBC47v5Kdba",
+        "outputId": "4988e0f4-1bb4-4202-b0d3-75cf3686ab3b"
+      },
+      "source": [
+        "n = int(input(\"INGRESE UN NUMERO ENTERO:\"))\n",
+        "if n>0:\n",
+        "    \n",
+        "    resultado =0\n",
+        "    for i in range(1, n+1):\n",
+        "        resultado +=(1/i)\n",
+        "        print(\"El resultado de la serie es:\",resultado)\n",
+        "else:\n",
+        "    print(\"El numero ingreado no es correcto ingrese otro\")"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "INGRESE UN NUMERO ENTERO:8\n",
+            "El resultado de la serie es: 1.0\n",
+            "El resultado de la serie es: 1.5\n",
+            "El resultado de la serie es: 1.8333333333333333\n",
+            "El resultado de la serie es: 2.083333333333333\n",
+            "El resultado de la serie es: 2.283333333333333\n",
+            "El resultado de la serie es: 2.4499999999999997\n",
+            "El resultado de la serie es: 2.5928571428571425\n",
+            "El resultado de la serie es: 2.7178571428571425\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CP4gmmttMbev",
+        "outputId": "ace7eef9-c315-4770-a4b7-c967c995e502"
+      },
+      "source": [
+        "#con While\n",
+        "comprobar = True\n",
+        "while comprobar == True:\n",
+        "  n = int(input(\"INGRESE UN NUMERO ENTERO:\"))\n",
+        "  if n>0:\n",
+        "      comprobar = False \n",
+        "    \n",
+        "      resultado =0\n",
+        "      for i in range(1, n+1):\n",
+        "          resultado +=(1/i)\n",
+        "      print(\"El resultado de la serie es:\",resultado)\n",
+        "else:\n",
+        "      print(\"El numero ingresado no es correcto ingrese otro\")"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "INGRESE UN NUMERO ENTERO:-2\n",
+            "INGRESE UN NUMERO ENTERO:5\n",
+            "El resultado de la serie es: 2.283333333333333\n",
+            "El numero ingresado no es correcto ingrese otro\n"
           ]
         }
       ]
